--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.11.4",
+    "@astrojs/prism": "^1.0.2",
     "@astrojs/rss": "^1.0.2",
     "@astrojs/sitemap": "^1.0.0",
-    "astro": "^1.5.0"
+    "@astrojs/tailwind": "^2.1.3",
+    "astro": "^1.5.0",
+    "tailwindcss": "^3.2.4"
   }
 }
