--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.5.0",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8"
   }
 }
